# no-no-mouse

./: Cargo.toml  LICENSE  README.md  config.toml  flake.nix  issues.md  prompt.md  specs.md
examples/: config.toml
src/: main.rs
